--- a/lucterios/mailing/locale/en/LC_MESSAGES/django.po
+++ b/lucterios/mailing/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-11 15:00+0000\n"
+"POT-Creation-Date: 2015-09-15 10:08+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,6 +20,27 @@ msgstr ""
 #: __init__.py:41
 msgid "Lucterios mailing"
 msgstr "Lucterios mailing"
+
+#: editors.py:54
+msgid "model"
+msgstr "model"
+
+#: editors.py:55
+msgid "filter"
+msgstr "filter"
+
+#: editors.py:63
+msgid "Delete"
+msgstr "Delete"
+
+#: editors.py:65
+msgid "Add"
+msgstr "Add"
+
+#: editors.py:72
+#, python-format
+msgid "Message defined for %d contacts"
+msgstr "Message defined for %d contacts"
 
 #: functions.py:52
 msgid "Email not configure!"
@@ -76,6 +97,34 @@ msgstr ""
 "User:%(username)s\n"
 "Password:%(password)s\n"
 
+#: models.py:36
+msgid "subject"
+msgstr "subject"
+
+#: models.py:37
+msgid "body"
+msgstr "body"
+
+#: models.py:39
+msgid "status"
+msgstr "status"
+
+#: models.py:39
+msgid "open"
+msgstr "open"
+
+#: models.py:39
+msgid "close"
+msgstr "close"
+
+#: models.py:40
+msgid "recipients"
+msgstr "recipients"
+
+#: models.py:41
+msgid "date"
+msgstr "date"
+
 #: views.py:42
 msgid "Change mailing parameters"
 msgstr "Change mailing parameters"
@@ -115,3 +164,55 @@ msgstr "EMail sent to check configuration"
 #: views.py:95
 msgid "EMail send, check it."
 msgstr "EMail send, check it."
+
+#: views_message.py:19
+msgid "Mailing"
+msgstr "Mailing"
+
+#: views_message.py:19
+msgid "Create and send mailing to contacts."
+msgstr "Create and send mailing to contacts."
+
+#: views_message.py:23
+msgid "Manage list of message for mailing."
+msgstr "Manage list of message for mailing."
+
+#: views_message.py:28
+msgid "Messages"
+msgstr "Messages"
+
+#: views_message.py:37
+msgid "Add message"
+msgstr "Add message"
+
+#: views_message.py:38
+msgid "Modify message"
+msgstr "Modify message"
+
+#: views_message.py:47
+msgid "Show message"
+msgstr "Show message"
+
+#: views_message.py:52
+msgid "Valid"
+msgstr "Valid"
+
+#: views_message.py:56
+msgid "Letters"
+msgstr "Letters"
+
+#: views_message.py:59
+msgid "Emails"
+msgstr "Emails"
+
+#: views_message.py:104
+msgid "Delete message"
+msgstr "Delete message"
+
+#: views_message.py:123
+msgid "Add recipient to message"
+msgstr "Add recipient to message"
+
+#: views_message.py:135
+msgid "Do you want to delete this recipient?"
+msgstr "Do you want to delete this recipient?"
