--- a/lucterios/mailing/locale/fr/LC_MESSAGES/django.po
+++ b/lucterios/mailing/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-11 15:00+0000\n"
+"POT-Creation-Date: 2015-09-15 10:08+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -21,6 +21,27 @@ msgstr ""
 #: __init__.py:41
 msgid "Lucterios mailing"
 msgstr "Lucterios courier"
+
+#: editors.py:54
+msgid "model"
+msgstr "modèle"
+
+#: editors.py:55
+msgid "filter"
+msgstr "filtre"
+
+#: editors.py:63
+msgid "Delete"
+msgstr "Suppression"
+
+#: editors.py:65
+msgid "Add"
+msgstr "Ajout"
+
+#: editors.py:72
+#, python-format
+msgid "Message defined for %d contacts"
+msgstr "Message défini pour %d contacts"
 
 #: functions.py:52
 msgid "Email not configure!"
@@ -77,6 +98,34 @@ msgstr ""
 "Alias:%(username)s\n"
 "Mot de passe:%(password)s\n"
 
+#: models.py:36
+msgid "subject"
+msgstr "sujet"
+
+#: models.py:37
+msgid "body"
+msgstr "corp"
+
+#: models.py:39
+msgid "status"
+msgstr "status"
+
+#: models.py:39
+msgid "open"
+msgstr "ouvert"
+
+#: models.py:39
+msgid "close"
+msgstr "fermé"
+
+#: models.py:40
+msgid "recipients"
+msgstr "destinataires"
+
+#: models.py:41
+msgid "date"
+msgstr "date"
+
 #: views.py:42
 msgid "Change mailing parameters"
 msgstr "Modifer les paramètrages de courriers"
@@ -116,3 +165,55 @@ msgstr "Courriel envoyé pour vérifier la configuration"
 #: views.py:95
 msgid "EMail send, check it."
 msgstr "Courriel envoyé, veuillez verifier."
+
+#: views_message.py:19
+msgid "Mailing"
+msgstr "Publipostage"
+
+#: views_message.py:19
+msgid "Create and send mailing to contacts."
+msgstr "Créer et envoyer un publipostage à des contacts"
+
+#: views_message.py:23
+msgid "Manage list of message for mailing."
+msgstr "Gestion de list de messages pour publipostage"
+
+#: views_message.py:28
+msgid "Messages"
+msgstr "Messages"
+
+#: views_message.py:37
+msgid "Add message"
+msgstr "Ajout de message"
+
+#: views_message.py:38
+msgid "Modify message"
+msgstr "Modification d'un messages"
+
+#: views_message.py:47
+msgid "Show message"
+msgstr "Voir un message"
+
+#: views_message.py:52
+msgid "Valid"
+msgstr "Valider"
+
+#: views_message.py:56
+msgid "Letters"
+msgstr "Lettres"
+
+#: views_message.py:59
+msgid "Emails"
+msgstr "Courriels"
+
+#: views_message.py:104
+msgid "Delete message"
+msgstr "Suppression d'un messages"
+
+#: views_message.py:123
+msgid "Add recipient to message"
+msgstr "Ajout d'un destinataire"
+
+#: views_message.py:135
+msgid "Do you want to delete this recipient?"
+msgstr "Voulez vous supprimer ce destinataire?"
