--- a/lucterios/mailing/locale/fr/LC_MESSAGES/django.po
+++ b/lucterios/mailing/locale/fr/LC_MESSAGES/django.po
@@ -8,19 +8,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-12-18 09:43+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2016-01-08 16:11+0000\n"
+"PO-Revision-Date: 2016-01-14 22:03+0000\n"
+"Last-Translator: b'Paul ARULATEDA <paul531@orange.fr>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Translated-Using: django-rosetta 0.7.8\n"
 
 #: __init__.py:41
 msgid "Lucterios mailing"
-msgstr "Lucterios courier"
+msgstr "Courrier Lucterios"
 
 #: editors.py:49
 msgid "model"
@@ -104,7 +105,7 @@ msgstr "sujet"
 
 #: models.py:41
 msgid "body"
-msgstr "corp"
+msgstr "corps"
 
 #: models.py:43
 msgid "status"
@@ -132,7 +133,7 @@ msgstr "contact"
 
 #: views.py:41
 msgid "Change mailing parameters"
-msgstr "Modifer les paramètrages de courriers"
+msgstr "Modifier les paramétrages du courrier"
 
 #: views.py:44
 msgid "Mailing parameters"
@@ -168,7 +169,7 @@ msgstr "Courriel envoyé pour vérifier la configuration"
 
 #: views.py:94
 msgid "EMail send, check it."
-msgstr "Courriel envoyé, veuillez verifier."
+msgstr "Courriel envoyé, veuillez le vérifier."
 
 #: views_message.py:21
 msgid "Mailing"
@@ -180,7 +181,7 @@ msgstr "Créer et envoyer un publipostage à des contacts"
 
 #: views_message.py:25
 msgid "Manage list of message for mailing."
-msgstr "Gestion de list de messages pour publipostage"
+msgstr "Gestion de liste de messages pour publipostage"
 
 #: views_message.py:30
 msgid "Messages"
@@ -239,7 +240,8 @@ msgstr "Voulez vous envoyer ce message?"
 msgid ""
 "Message sent to %(nbsent)d contact.{[br/]}Failure to %(nbfailed)d contacts."
 msgstr ""
-"Message envoyé à %(nbsent)d contacts.{[br/]}Echec pour %(nbfailed)d contacts."
+"Message envoyé à %(nbsent)d contacts.{[br/]}Echec pour %(nbfailed)d "
+"contacts."
 
 #: views_message.py:138
 msgid "Delete message"
