--- a/lucterios/mailing/locale/fr/LC_MESSAGES/django.po
+++ b/lucterios/mailing/locale/fr/LC_MESSAGES/django.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-08 16:11+0000\n"
+"POT-Creation-Date: 2016-01-21 16:50+0000\n"
 "PO-Revision-Date: 2016-01-14 22:03+0000\n"
 "Last-Translator: b'Paul ARULATEDA <paul531@orange.fr>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Translated-Using: django-rosetta 0.7.8\n"
 
@@ -240,8 +240,7 @@ msgstr "Voulez vous envoyer ce message?"
 msgid ""
 "Message sent to %(nbsent)d contact.{[br/]}Failure to %(nbfailed)d contacts."
 msgstr ""
-"Message envoyé à %(nbsent)d contacts.{[br/]}Echec pour %(nbfailed)d "
-"contacts."
+"Message envoyé à %(nbsent)d contacts.{[br/]}Echec pour %(nbfailed)d contacts."
 
 #: views_message.py:138
 msgid "Delete message"
