--- a/lucterios/contacts/locale/fr/LC_MESSAGES/django.po
+++ b/lucterios/contacts/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-07-25 16:28+0000\n"
+"POT-Creation-Date: 2016-07-26 12:17+0000\n"
 "PO-Revision-Date: 2016-01-11 23:12+0000\n"
 "Last-Translator: b'Paul ARULATEDA <paul531@orange.fr>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -539,6 +539,18 @@ msgstr "%d contacts ont été importés"
 #: views.py:713
 msgid "Back"
 msgstr "Retour"
+
+#: views.py:737
+msgid "configure our details"
+msgstr "Configurez les informations de votre structure."
+
+#: views.py:747
+msgid "configure your contacts"
+msgstr "Configurez la gestion de vos contacts et importez les."
+
+#: views.py:778
+msgid "configure your responsables"
+msgstr "Configurez la liste des responsables de votre structure."
 
 #: views_contacts.py:50
 msgid "Office"
